fixe  wrap

--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,11 @@ div.cards {
   max-width: 960px;
   text-align: center;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
+  grid-auto-flow:row dense;
   grid-gap: 16px;
+  transition: all 5.3s ease-in-out;
+
 }
 
 div.card {
@@ -31,7 +34,8 @@ div.card {
   text-align: left;
   z-index: 1;
   min-width: 300px;
-  transition: all .3s ease-in-out;
+  transform: translateX(1px);
+  transition: all 5.3s ease-in-out;
 }
 .cards__empty .card.unselected {
   opacity: 1;
@@ -48,6 +52,7 @@ div.card {
   overflow: hidden;
 }
 .card__img {
+  max-width: 300px;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -127,6 +132,7 @@ div.card.selected {
   margin: 0;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   opacity: 1;
+  transform: translateX(0);
 }
 div.card.selected .card__img-box {
   display: none;
